--- a/dzj.html
+++ b/dzj.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -8,7 +8,7 @@
 <meta name="description" content="冬参佛法--是一个佛学网站 主要呈现视频 佛学经文 供大家学习" />
 <title>&#19996;&#21319;&#30340;&#20315;&#27861;-主页</title>
 <link href="title.ico" rel="shortcut icon"/>
-<link href='./css/ys.css' rel='stylesheet' type='text/css'>
+<link href='./3/css/ys.css' rel='stylesheet' type='text/css'>
 </head>
  <body>
 
@@ -53,7 +53,7 @@ window.location.href='xiouwap.html';
 <div id="main">
   <div class="left">
   <div class="g"><li></li></div>	
-  <script type='text/javascript' src='./js/in.js'></script>
+  <script type='text/javascript' src='./3/js/in.js'></script>
 <div class="shipin">  
 			<div id="idData_0"></div>
 						
@@ -136,7 +136,7 @@ window.location.href='xiouwap.html';
 	 
 	 
 	 
-	<script src="ZLpages.js"></script>	 
+	<script src="./3/ZLpages.js"></script>	 
 	 
 	 
 	 
