--- a/dzj.html
+++ b/dzj.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="佛法,冬参佛法,视频讲解 东升" />
 <meta name="description" content="冬参佛法--是一个佛学网站 主要呈现视频 佛学经文 供大家学习" />
 <title>&#19996;&#21319;&#30340;&#20315;&#27861;-主页</title>
-<link href="title.ico" rel="shortcut icon"/>
+<link href="../3/title.ico" rel="shortcut icon"/>
 <link href='../3/css/ys.css' rel='stylesheet' type='text/css'>
 </head>
  <body>
