--- a/dzj.html
+++ b/dzj.html
@@ -51,13 +51,13 @@ window.location.href='xiouwap.html';
  <script src="./qldzj/qldzj.js"></script>	
 	<script src="./dzxxdzj/dzxx.js"></script>
 <div id="main">
-  <div class="left">
+  <div class="left5">
   <div class="g"><li></li></div>	
   <script type='text/javascript' src='../3/js/in.js'></script>
 <div class="shipin">  
-			<div id="idData_0"></div>
+			<center><div id="idData_0"></div>
 						
-			<div id="barcon_0"></div>	
+			<div id="barcon_0"></div></center>	
          
 
 
