--- a/dzj.html
+++ b/dzj.html
@@ -39,11 +39,13 @@ window.location.href='xiouwap.html';
  
  <div class="nav">
 <ul>
-        
+        <center>
+            <li><a href="">------------></a></li>
          <li id="menu1"><a href="dzj.html?url4=17">乾隆大正藏</a></li>
          <li id="menu2"><a href="dzj.html?url6=18">大正藏</li>
          <li id="menu3"><a href="dzj.html?url2=25">新修大正藏</li>
-
+          <li><a href=""><-------------</a></li>
+</center>
     </ul>
 	
  </div>	
