--- a/dzj.html
+++ b/dzj.html
@@ -48,10 +48,7 @@ href="">------------</a></li>
          <li id="menu1"><a href="dzj.html?url4=17">乾隆大正藏</a></li>
          <li id="menu2"><a href="dzj.html?url6=18">大正藏</a></li>
          <li id="menu3"><a href="dzj.html?url2=25">新修大正藏</a></li>
-          <li><a href=""><-------------</a></li> <li><a href="">-------------</a></li> <li><a 
-
-href="">-------------</a></li>
- <li><a href="">-------------</a></li>
+ <li><a href=""><-------------</a></li> <li><a href="">-------------</a></li> <li><a href="">-------------</a></li><li><a href="">-------------</a></li>
 </center>
     </ul>
 	
