--- a/dzj.html
+++ b/dzj.html
@@ -40,8 +40,8 @@ window.location.href='xiouwap.html';
  <div class="nav">
 <ul>
         <center>
-<<<<<<< HEAD
-            <li><a href="">------------</a></li> <li><a href="">------------</a></li> <li><a 
+
+            <li><a href="">------------</a></li> <li><a 
 
 href="">------------</a></li>
  <li><a href="">------------</a></li> <li><a href="">------------></a></li>
