--- a/dzj.html
+++ b/dzj.html
@@ -49,6 +49,7 @@ href="">------------</a></li>
          <li id="menu2"><a href="dzj.html?url6=18">大正藏</a></li>
          <li id="menu3"><a href="dzj.html?url2=25">新修大正藏</a></li>
  <li><a href=""><-------------</a></li> <li><a href="">-------------</a></li> <li><a href="">-------------</a></li><li><a href="">-------------</a></li>
+<li><a href="">-------------</a></li>
 </center>
     </ul>
 	
@@ -151,7 +152,8 @@ href="">------------</a></li>
 	 </div>
 	
 	
-		</body>
+		
 	 <div id="footer">
 </div>
+</body>
 </html>
