--- a/dzj.html
+++ b/dzj.html
@@ -31,7 +31,7 @@ system.x11 = (p == 'X11') || (p.indexOf('Linux') == 0);
 
 if(system.win||system.mac||system.xll){  
 }else{  
-window.location.href='dzjwap.html';  
+window.location.href='dzjwap.html?url4=17';  
 }  
 
 </script>
