--- a/dzjwap.html
+++ b/dzjwap.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0,user-scalable=0" />
 <title>东升佛法-&#31227;&#21160;&#29256;</title>
-<link href="../3/app/title.ico" rel="shortcut icon"/>
+<link href="../3/app/titlewap.jpg" rel="shortcut icon"/>
 <link href='../3/app/css/wapys.css' rel='stylesheet' type='text/css'>
 
 
@@ -142,7 +142,7 @@
 	 
 	 
 	 </div>
-<script type='text/javascript' src='../3/app/js/footer.js'></script>
+<script type='text/javascript' src='../3/app/js/footer2.js'></script>
 	<script charset='uft-8' style='text/javascript' src="../3/app/js/scroll2.js"></script>
 <script type="text/javascript" src="../3/app/js/tool.js"></script>
  </body>
