--- a/dzjwap.html
+++ b/dzjwap.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0,user-scalable=0" />
 <title>东升佛法-&#31227;&#21160;&#29256;</title>
-<link href="../3/app/titlewap.jpg" rel="shortcut icon"/>
+<link href="../3/app/images/titlewap.jpg" rel="shortcut icon"/>
 <link href='../3/app/css/wapys.css' rel='stylesheet' type='text/css'>
 
 
@@ -32,7 +32,7 @@
 </script>
  <script type='text/javascript' src='../3/app/js/header.js'></script>
  <link type="text/css" rel="stylesheet" href="../3/app/css/style.css" />
-
+     
  <div class="box02">
                <div class="box02_2"></div> 		
 		<div class="box02_1">
