--- a/dzj.html
+++ b/dzj.html
@@ -61,7 +61,7 @@ href="">--------</a></li>
   <div class="left5">
   <div class="g"><li></li></div>	
   <script type='text/javascript' src='../3/js/in.js'></script>
-<div class="shipin">  
+<div class="shipin2">  
 			<center><ul id="idData_0"></ul>
 						
 			<div id="barcon_0"></div></center>	
