--- a/dzj.html
+++ b/dzj.html
@@ -62,7 +62,7 @@ href="">--------</a></li>
   <div class="g"><li></li></div>	
   <script type='text/javascript' src='../3/js/in.js'></script>
 <div class="shipin2">  
-			<center><ul id="idData_0"></ul>
+			<center><div id="idData_0"></div>
 						
 			<div id="barcon_0"></div></center>	
          
