--- a/dzj.html
+++ b/dzj.html
@@ -64,7 +64,7 @@ href="">--------</a></li>
 <div class="shipin2">  
 			<center><div id="idData_0"></div>
 						
-			<div id="barcon_0"></div></center>	
+			</div><div id="barcon_0"></div></center>	
          
 
 
@@ -122,7 +122,7 @@ href="">--------</a></li>
 	
 	
 	</script>
-	</div>
+	
 	</div>
 	
 	
@@ -149,7 +149,6 @@ href="">--------</a></li>
 	 
 	 
 	 
-	 </div>
 	
 	
 		
