--- a/dzj.html
+++ b/dzj.html
@@ -61,8 +61,9 @@ href="">--------</a></li>
   <div class="left5">
   <div class="g"><li></li></div>	
   <script type='text/javascript' src='../3/js/in.js'></script>
-<div class="shipin2">  
-			<center><div id="idData_0"></div>
+<center>
+	  <div class="shipin2">  
+			<div id="idData_0"></div>
 						
 			</div><div id="barcon_0"></div></center>	
          
