--- a/dzjwap.html
+++ b/dzjwap.html
@@ -53,10 +53,11 @@
   <div class="left5">
   <div class="g"><li></li></div>	
   <script type='text/javascript' src='../3/js/in.js'></script>
-<div class="shipin">  
-			<center><div id="idData_0"></div>
+<center>
+	  <div class="shipin2">  
+			<div id="idData_0"></div>
 						
-			<div id="barcon_0"></div></center>	
+			</div><div id="barcon_0"></div></center>	
          
 
 
@@ -114,7 +115,7 @@
 	
 	
 	</script>
-	</div>
+	
 	</div>
 	
 	
