--- a/dzjwap.html
+++ b/dzjwap.html
@@ -57,9 +57,9 @@
 	  <div class="shipin2">  
 			<div id="idData_0"></div>
 						
-			</div><div id="barcon_0"></div></center>	
+			<div id="barcon_0"></div>
          
-
+</div></center>	
 
 	<script type="text/javascript">
 	
