--- a/dzjwap.html
+++ b/dzjwap.html
@@ -54,12 +54,11 @@
   <div class="g"><li></li></div>	
   <script type='text/javascript' src='../3/js/in.js'></script>
 <center>
-	  <div class="shipin2">  
-			<div id="idData_0"></div>
+	  <div class="shipin2"><div id="idData_0"></div></div>
 						
 			<div id="barcon_0"></div>
          
-</div></center>	
+</center>	
 
 	<script type="text/javascript">
 	
