--- a/dzjwap.html
+++ b/dzjwap.html
@@ -30,7 +30,7 @@
 
 
 </script>
- <script type='text/javascript' src='../3/app/js/header.js'></script>
+ <script type='text/javascript' src='../3/app/js/header2.js'></script>
  <link type="text/css" rel="stylesheet" href="../3/app/css/style.css" />
      
  <div class="box02">
