--- a/dzjwap.html
+++ b/dzjwap.html
@@ -37,7 +37,7 @@
                <div class="box02_2"></div> 		
 		<div class="box02_1">
 	<ul>
-         <li><a href='./index.html'>首页</a></li>
+         <li><a href='./3/app/index.html'>首页</a></li>
          <li id="menu1"><a href="dzjwap.html?url4=17">乾隆大正藏</a></li>
          <li id="menu2"><a href="dzjwap.html?url6=18">大正藏</a></li>
          <li id="menu3"><a href="dzjwap.html?url2=25">新修大正藏</a></li>
