--- a/dzjwap.html
+++ b/dzjwap.html
@@ -30,7 +30,7 @@
 
 
 </script>
- <script type='text/javascript' src='./3/app/js/header2.js'></script>
+ <script type='text/javascript' src='../3/app/js/header2.js'></script>
  <link type="text/css" rel="stylesheet" href="../3/app/css/style.css" />
      
  <div class="box02">
@@ -142,7 +142,7 @@
 	 
 	 
 	 </div>
-<script type='text/javascript' src='./3/app/js/footer2.js'></script>
+<script type='text/javascript' src='../3/app/js/footer.js'></script>
 	<script charset='uft-8' style='text/javascript' src="../3/app/js/scroll2.js"></script>
 <script type="text/javascript" src="../3/app/js/tool.js"></script>
  </body>
